# Hackathon-Humanoid-Robot

./: .env.example  .gitignore  AUDIO_ARCHITECTURE.md  OFFICIAL_SDK_ALIGNMENT.md  PRE_FLIGHT_CHECKLIST.md  QUICKSTART.md  README.md  ROS2_REMOTE_SETUP.md  START_HERE.md  main.py  pyproject.toml  test_robot_audio.py
scripts/: change_face.sh  ssh_robot.sh
ultra_x2/: __init__.py  config.py  diagnostics.py  exceptions.py  robot.py  voice.py
ultra_x2/llm/: __init__.py  agent.py  client.py  personalities.py  tools.py
ultra_x2/speech/: __init__.py  recorder.py  robot_microphone.py  speaker.py  transcriber.py
